hard-gists/aa8713d4334036bcb0060ff73dba54c4/run.log
=== Docker Run Log for aa8713d4334036bcb0060ff73dba54c4 ===
Started at: Mi 29. Okt 19:12:06 CET 2025

[2025-10-29 19:12:07] START: Running container for aa8713d4334036bcb0060ff73dba54c4
[2025-10-29 19:12:07] SUCCESS: Container 0ace92147a2b9c5649c51123009eb87dd8ffdb7127d845632f24eb3073422d93 started for aa8713d4334036bcb0060ff73dba54c4
=== Container logs for aa8713d4334036bcb0060ff73dba54c4 ===
  File "/snippet.py", line 93
    print "Usage: mount_shares_tool.py 'afp://servername/share' '/path/to/mount/at'"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for aa8713d4334036bcb0060ff73dba54c4 ===
[2025-10-29 19:12:09] INFO: Container 0ace92147a2b9c5649c51123009eb87dd8ffdb7127d845632f24eb3073422d93 has stopped
